--- a/ZenithSociety/ZenithWebSite.csproj
+++ b/ZenithSociety/ZenithWebSite.csproj
@@ -173,17 +173,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201609302051447_InitialCreate.cs" />
-    <Compile Include="Migrations\201609302051447_InitialCreate.Designer.cs">
-      <DependentUpon>201609302051447_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201610112258382_Names.cs" />
-    <Compile Include="Migrations\201610112258382_Names.Designer.cs">
-      <DependentUpon>201610112258382_Names.cs</DependentUpon>
+    <Compile Include="Migrations\201610120106490_FirstMigration.cs" />
+    <Compile Include="Migrations\201610120106490_FirstMigration.Designer.cs">
+      <DependentUpon>201610120106490_FirstMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -191,6 +186,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Docs\ReadMe.txt" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -259,15 +255,12 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201609302051447_InitialCreate.resx">
-      <DependentUpon>201609302051447_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201610112258382_Names.resx">
-      <DependentUpon>201610112258382_Names.cs</DependentUpon>
-    </EmbeddedResource>
+    <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <EmbeddedResource Include="Migrations\201610120106490_FirstMigration.resx">
+      <DependentUpon>201610120106490_FirstMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
