Fixed Activity Edit Fixed CSS not working when deployed

--- a/ZenithSociety/ZenithWebSite.csproj
+++ b/ZenithSociety/ZenithWebSite.csproj
@@ -200,6 +200,10 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\ZenithSociety.mdf" />
+    <Content Include="App_Data\ZenithSociety_log.ldf">
+      <DependentUpon>ZenithSociety.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-datetimepicker.css" />
     <Content Include="Content\bootstrap-datetimepicker.min.css" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -299,6 +303,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <None Include="Properties\PublishProfiles\ZenithWebSite2016 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.1.1-vsdoc.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -378,9 +383,7 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Migrations\ApplicationDbContext\201610200347155_FirstMigration.resx">
       <DependentUpon>201610200347155_FirstMigration.cs</DependentUpon>
